@@ -1,4 +1,5 @@
 X 0.2
+    * Add Bow + Efficiency = instant shoot
     * Add Bow + Aqua Affinity = freeze water, stun players
     + Add Bow + Bane of Arthropods = poison
     * Fix Hoe + Respiration to grow saplings and crops using right-click
